--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=Perfulandia
+# Configuración de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/perfulandia_db
+spring.datasource.username=root
+spring.datasource.password=antu2005
+
+# Dialecto y plataforma
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Mostrar queries SQL en consola
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Puerto del servidor
+server.port=8080
