--- a/tiendaSpa/src/main/resources/application.properties
+++ b/tiendaSpa/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-# Configuración de la base de datos
-server.port=8080
+server.port=8083
 spring.application.name=tiendaSpa
 
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/db_perfulandia
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=antu2005
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
